@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
-.TH AIR-QUALITY-SENSOR "1" "February 2016" "air-quality-sensor (air-quality-sensor) 0.1.4" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
+.TH AIR-QUALITY-SENSOR "1" "August 2017" "air-quality-sensor (air-quality-sensor) 0.1.4.1" "User Commands"
 .SH NAME
 air-quality-sensor \- User space driver for AppliedSensor's Indoor Air Monitor
 .SH SYNOPSIS
@@ -33,7 +33,7 @@ Home page: <https://github.com/bwildenhain/air\-quality\-sensor>
 .SH COPYRIGHT
 Copyright \(co 2014 Jan\-Benedict Glaw
 .br
-Copyright \(co 2016 Benedikt Wildenhain
+Copyright \(co 2017 Benedikt Wildenhain
 .PP
 License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
 .br
